# linux_app_ins_prj

./: .gitignore  .gitignore~  .tags  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  README0.md  auto.sh  auto.sh~  project.org  readme.org  readme.org~
app/: CMakeLists.txt  Makefile
app/chat_server/: CMakeLists.txt  chat_server.c  chat_server.h  chat_server.h~  chat_server_thread.c  chat_server_thread.c~  chat_server_thread.h
app/coding_frame/: CMakeLists.txt  button_process.c  button_process.h  coding_frame_thread.c  coding_frame_thread.h  hsm_ins_process.c  hsm_ins_process.h  linux_ipc_process.c  linux_ipc_process.h  max485_thread.c  max485_thread.h  readme.org  timer_period_process.c  timer_period_process.h  uart_485_process.c
app/coding_frame/function/: qhsmtst.c  qhsmtst.h
app/coding_frame/function/hsm/: qassert.h  qepn.c  qepn.h  qpn_port.h
app/coding_frame/intrrupts/: gpio_exti_int.c
app/enic/: address.h  core_feature_base.h  crypto.c  crypto.h  enic_thread.c  enic_thread.c~  fifo.h  frame.h  frame.h~  hashtable.h  hsm_transport.h  in_cksum.h  inet.h  ipsec.c  ipsec.h  ipsec.h~  msg.c  msg.h  packet_frame.c  packet_frame.c~  packet_frame.h  priv.h  rx.h  sw_timer.h  sysdep.h  t690_conf.h  t690_gmac.h  test.c  test.h  tx.h
app/enic_bk/enic/: CMakeLists.txt  address.h  common.c  common.h  constant_ops.h  crypto.c  crypto.c~  crypto.h  enic_thread.h  fifo.h  frame.h  freg.h  hashtable.h  ipc_slave.h  ipsec.c  ipsec.c~  job.h  list.h  msg.h~  nic.h  nic.h~  packet_frame.c  packet_frame.h  rx.h  scatterlist.h  scatterlist.h~  system_t690.h  t690.h  t690_conf.h~  t690_phy.h  test.c~  tx.h
app/happy_hack/: happy_hack_thread.c  happy_hack_thread.h
app/happy_hack1/: happy_hack1_thread.c  happy_hack1_thread.h
app/hello_world/: CMakeLists.txt~  Makefile  copy_f.c  copy_f.h  copy_f.h~  fifio_client_server.c  fifio_client_server.c~  fifio_client_server.h  fifio_client_server.h~  file_io_buffer_f.c  file_io_buffer_f.c~  file_io_buffer_f.h  file_io_buffer_f.h~  file_io_f.c  file_io_f.c~  file_io_f.h  func_tests.h  func_tests.h~  hello_world_thread.c  hello_world_thread.c~  hello_world_thread.h~  misc_cc_f.h~  misc_f.c  misc_f.cc~  misc_f.cpp  misc_f.cpp~  misc_f.h  misc_f.hpp  misc_f.hpp~  misc_f.h~  misc_f1.c  misc_f1.h  misc_f1.h~  misc_f2.c  misc_f2.h  misc_f2.h~  msg_queue_f.c  msg_queue_f.c~  msg_queue_f.h  msg_queue_f.h~  (+6 more)
app/hello_world/lib/: ename.c.inc  error.c  get_num.c  get_num.h  tlpi_hdr.h  unp.h
app/http_client/: CMakeLists.txt  http_client.c  http_client.c~  http_client.h  http_client.h~  http_client_thread.c  http_client_thread.c~  http_client_thread.h  http_client_thread.h~
app/httpd/: httpd.c  httpd.c~  httpd.h  httpd.h~  httpd_thread.c  httpd_thread.h  httpd_thread.h~
app/mysql_app/: mysql_access_thread.c  mysql_access_thread.c~  mysql_access_thread.h  mysql_access_thread.h~
app/net_communication/: CMakeLists.txt  CMakeLists.txt~  net_communication_thread.h  net_communication_thread.h~
app/qt_apps/: CMakeLists.txt
app/qt_apps/qt_helloworld/: CMakeLists.txt  CMakeLists.txt~
app/qt_helloworld/: CMakeLists.txt  CMakeLists.txt~  mainwindow.cpp  qt_hello.cpp~  qt_hello_thread.c  qt_hello_thread.c~
app/qt_test1/: mainwindow.h  qt_hello.cpp  qt_test1_thread.c  qt_test1_thread.h
app/qt_tst1/: qt_hello.hpp  qt_tst1_thread.c  qt_tst1_thread.h
app/ros_control/: CMakeLists.txt
app/structures_and_algorithms/: CMakeLists.txt  PriorityQueue_f.c  PriorityQueue_f.c~  PriorityQueue_f.h  big_little_endian_f.c  big_little_endian_f.h  double_ended_queue_f.c  double_ended_queue_f.c~  double_ended_queue_f.h  double_ended_queue_f.h~  double_list_f.c  double_list_f.h  fatal.h  func_tests.h  queue_twostack_f.c  queue_twostack_f.c~  queue_usingCircularArray_f.c  queue_usingCircularArray_f.c~  queue_usingarray_f.c  queue_usingarray_f.c~  single_list_f.c  single_list_f.h  sort_f.c  sort_f.h  stack_array_f.c  stack_array_f.h  stack_list_f.c  stack_list_f.h
app/test1/: CMakeLists.txt  test1_thread.c  test1_thread.h
app/test9/: test9_thread.c  test9_thread.h
app/test_app/: test_thread.c  test_thread.h
app/uart_communication/: uart_thread.c  uart_thread.c~  uart_thread.h  uart_thread.h~
bsp/: CMakeLists.txt  CMakeLists.txt~
bsp/inc/: bsp_buzz.h  bsp_can.h  bsp_hal.h  bsp_led.h  bsp_max485.h  bsp_ttyusb0.h  bsp_ttyusb0.h~
bsp/src/: bsp_buzz.c  bsp_led.c  bsp_max485.c  bsp_ttyusb0.c  bsp_ttyusb0.c~
cmake/: app.cmake  app.cmake~  arm_linux_cross.cmake  extentions.cmake  riscv_linux_cross.cmake
flib/: CMakeLists.txt
flib/inc/: debug.h  delay.h  thread_common.h
flib/src/: delay.c  thread_common.c
kernel_drivers/access_file_in_module/: example.c  test.sh
kernel_drivers/auto_make_node/: example.c  test.sh
kernel_drivers/char_drv/: char_drv.c  test_ioctl.h  test_user.c
kernel_drivers/dedicated_workqueue/: Makefile~  dedicated-workqueue.c
kernel_drivers/device_packaged_data/: example.c
kernel_drivers/dynamic_register/: Makefile~  test.sh
kernel_drivers/export_symbol/Export/: test.sh
kernel_drivers/export_symbol/UseExport/: test.sh
kernel_drivers/hello/: Makefile~  hello.c
kernel_drivers/hrtimer/: Makefile~  hr-timer.c
kernel_drivers/ioctl/: example.c
kernel_drivers/kprobe/: test.sh
kernel_drivers/kthread/: k-thread.c
kernel_drivers/lseek/: example.c
kernel_drivers/multiplexing/: example.c
kernel_drivers/netlink/: netlink_app.c  netlink_module.c
kernel_drivers/private_data/: test.sh
kernel_drivers/shared_workqueue/: Makefile~  shared-workqueue.c
kernel_drivers/timer/: std-timer.c
kernel_drivers/uio/: uio_test0.c  uio_user_app.c
kernel_drivers/user_kernel_data_access/: example.c  test.sh
kernel_drivers/waitqueue/: Makefile~  waitqueue.c
main/: CMakeLists.txt  Makefile  app_config.h  app_config.h.in  app_config.h~  app_init.c  app_init.c~  app_init.h  app_init.h~  bsp_init.c  bsp_init.h  main.c
middlewares/: CMakeLists.txt  CMakeLists.txt~
scripts/shell/: awk_eg0.awk  colors.awk  create_new_app.sh  create_new_app.sh~  em.data  openamp.sh  shell_ex0.sh
(+5 files in other folders)
