if (${HELLO_WORLD_APP})
add_subdirectory(hello_world)
endif (${HELLO_WORLD_APP})

if (${CODING_FRAME_APP})
add_subdirectory(coding_frame)
endif (${CODING_FRAME_APP})


if (${QT_TEST1_APP})
add_subdirectory(qt_test1)
endif (${QT_TEST1_APP})


if (${HAPPY_HACK1_APP})
add_subdirectory(happy_hack1)
endif (${HAPPY_HACK1_APP})


if (${HAPPY_HACK_APP})
add_subdirectory(happy_hack)
endif (${HAPPY_HACK_APP})


if (${QT_TST1_APP})
add_subdirectory(qt_tst1)
endif (${QT_TST1_APP})


if (${TEST1_APP})
add_subdirectory(test1)
endif (${TEST1_APP})



if (${UART_COMMUNICATION_APP})
add_subdirectory(uart_communication)
endif (${UART_COMMUNICATION_APP})

if (${STRUCTURE_APP})
add_subdirectory(structures_and_algorithms)
endif (${STRUCTURE_APP})

if (${NET_COMMUNICATION_APP})
add_subdirectory(net_communication)
endif (${NET_COMMUNICATION_APP})

if (${HTTPD_APP})
add_subdirectory(httpd)
endif (${HTTPD_APP})

if (${HTTP_CLIENT_APP})
add_subdirectory(http_client)
endif (${HTTP_CLIENT_APP})

if (${ENIC_APP})
add_subdirectory(enic)
endif (${ENIC_APP})

if (${CHAT_SERVER_APP})
add_subdirectory(chat_server)
endif (${CHAT_SERVER_APP})

if (${MYSQL_ACCESS_APP})
add_subdirectory(mysql_app)
endif (${MYSQL_ACCESS_APP})

#qt relate apps
if (${QT_HELLO_WORLD_APP})
add_subdirectory(qt_helloworld)
endif (${QT_HELLO_WORLD_APP})







